fixed an alignment issue

--- a/client/src/Components/Desktop/Desktop.scss
+++ b/client/src/Components/Desktop/Desktop.scss
@@ -30,7 +30,7 @@ $darkColor: rgba(74, 68, 83, 0.85);
 .shortcut img {
 	height: 25%;
 	width: auto;
-	margin:.2rem;
+	margin-bottom:.2rem;
 	box-shadow: $mediumShadow;
 }
 
