--- a/client/src/Components/Taskbar/Taskbar.scss
+++ b/client/src/Components/Taskbar/Taskbar.scss
@@ -50,7 +50,7 @@ $darkColor: rgba(74, 68, 83, 0.85);
 	margin-right: .5rem;
 }
 
-p {
+#time-container p {
 	font-size: 1rem;
 	font-family: "Montserrat", sans-serif;
 	font-weight: 600;
